# cameraclient

./: CMakeLists.txt  CameraClient.desktop  README.md  main.cpp
.github/workflows/: linux.yml  windows-mingw.yml  windows.yml
FileManagement/: FileManager.cpp  FileManager.h  FileWriter.cpp  FileWriter.h
ci/: windows-mingw-publish.ps1  windows-publish.ps1
decode/: decode.cpp  decode.h
ipc/: cameraSubscriberListener.cpp  cameraSubscriberListener.h  mcusubscriberlistener.cpp  mcusubscriberlistener.h
ipc/DDS/: CMakeLists.txt
ipc/DDS/DdsCommon/include/: Defs.h
ipc/DDS/DdsSubscriber/include/: SampleSubscriber.h  SubscriberTopicer.h
ipc/DDS/DdsSubscriber/include/QosUnion/: BigdataSubscriberQos.h  DefaultSubscriberQos.h  ISubscriberQos.h  RQosProducer.h  ZeroCopySubscriberQos.h
ipc/DDS/DdsSubscriber/src/: SampleSubscriber.cpp  SubscriberTopicer.cpp
ipc/DDS/DdsSubscriber/src/QosUnion/: BigdataSubscriberQos.cpp  DefaultSubscriberQos.cpp  RQosProducer.cpp  ZeroCopySubscriberQos.cpp
ipc/Data/: BstDemo397Rx.cxx  BstDemo397Rx.h  BstDemo397Rx.idl  BstDemo397RxPubSubTypes.cxx  BstDemo397RxPubSubTypes.h  BstDemo397Tx.cxx  BstDemo397Tx.h  BstDemo397Tx.idl  BstDemo397TxPubSubTypes.cxx  BstDemo397TxPubSubTypes.h  CameraStream.cxx  CameraStream.h  CameraStream.idl  CameraStreamPubSubTypes.cxx  CameraStreamPubSubTypes.h
model/: cameramanager.cpp  cameramanager.h  cameramodel.cpp  cameramodel.h
ui/: CMakeLists.txt  ConfigClient.cpp  ConfigClient.h  camerademo.cpp  camerademo.h  mainwindow.cpp  mainwindow.h  mcudemo.cpp  mcudemo.h  videoplayer.cpp  videoplayer.h
widget/: viewbutton.cpp  viewbutton.h
